--- a/kubernetes/prod/app-prod-pvc-redis.yml
+++ b/kubernetes/prod/app-prod-pvc-redis.yml
@@ -1,8 +1,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: app-prod-pvc-redis
-  namespace: prod
+  name: hello-rheasamuel-data
 spec:
   accessModes:
     - ReadWriteOnce
