--- a/kubernetes/prod/app-prod-deployment-worker.yml
+++ b/kubernetes/prod/app-prod-deployment-worker.yml
@@ -14,5 +14,5 @@ spec:
     spec:
       containers:
       - name: worker
-        image: rheasamuel/api_worker:1.0
+        image: iranarang/api_worker:1.0
 
