--- a/kubernetes/test/app-test-deployment-flask.yml
+++ b/kubernetes/test/app-test-deployment-flask.yml
@@ -1,7 +1,9 @@
-apiVersion: v1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: flask-app-test
+  labels:
+    app: flask-app-test
 spec:
   replicas: 1
   selector:
