--- a/kubernetes/test/app-test-deployment-redis.yml
+++ b/kubernetes/test/app-test-deployment-redis.yml
@@ -1,7 +1,9 @@
-apiVersion: v1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: redis-db-test
+  labels:
+    app: redis-db-test
 spec:
   replicas: 1
   selector:
@@ -13,7 +15,7 @@ spec:
         app: redis-db-test
     spec:
       containers:
-      - name: redis
+      - name: redis-db-test
         image: redis:7
         ports:
         - containerPort: 6379
