--- a/kubernetes/test/app-test-deployment-flask.yml
+++ b/kubernetes/test/app-test-deployment-flask.yml
@@ -19,4 +19,6 @@ spec:
         image: rheasamuel/test_app:1.0
         ports:
         - containerPort: 5002
-
+        env:
+        - name: REDIS_HOST
+          value: "<REDIS_SERVICE_IP>"
