--- a/kubernetes/test/app-test-deployment-worker.yml
+++ b/kubernetes/test/app-test-deployment-worker.yml
@@ -17,4 +17,7 @@ spec:
       containers:
       - name: worker-test
         image: rheasamuel/api_worker:1.0
+        env:
+        - name: REDIS_HOST
+          value: "<REDIS_SERVICE_IP>"
 
