--- a/kubernetes/prod/app-prod-deployment-worker.yml
+++ b/kubernetes/prod/app-prod-deployment-worker.yml
@@ -15,4 +15,7 @@ spec:
       containers:
       - name: worker
         image: rheasamuel/api_worker:1.0
+        env:
+        - name: REDIS_HOST
+          value: "<REDIS_SERVICE_IP>"
 
